# blockkit

./: .gitignore  404.html  CNAME  LICENSE  README.md  index.html  message.py  meta.py  mise.toml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  pages.yml  publish.yml  python-app.yml
beyond/: index.html
blockkit/: __init__.py  blocks.py  components.py  core.py  display.py  elements.py  enums.py  fields.py  generators.py  messages.py  objects.py  surfaces.py  utils.py  validators.py
docs/: beyond.md  index.md  quickstart.md  releases.md
examples/: block_builder_url_example.py  example.py
quickstart/: index.html
releases/: index.html
search/: search_index.json
tests/: conftest.py  test_blocks.py  test_components.py  test_core.py  test_display.py  test_elements.py  test_fields.py  test_generators.py  test_objects.py  test_pydantic.py  test_surfaces.py  test_utils.py
