[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blockkit"
version = "2.0.4"
authors = [{ name = "Dima Czernyszow", email = "imryche13@gmail.com" }]
description = "A fast way to build Block Kit interfaces in Python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/imryche/blockkit"
Issues = "https://github.com/imryche/blockkit/issues"


[tool.ruff]
line-length=88
extend-select = ["I", "UP", "ASYNC"]
extend-ignore = ["UP007"]

[tool.ruff.lint]
extend-select = ["I", "UP", "E501", "ASYNC"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "mkdocs-material>=9.6.14",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
]
